# engineering-scripts

./: .gitignore  Markdown_Guide.md  README.md
python/: README_Template.md  pyproject.toml  ruff.toml  ty.toml
python/code/ai/openai_quota/: main.py
python/code/function_apps/email/: main.py
python/code/function_apps/mail_sender/: function_app.py  host.json
python/code/helper_functions/: class_checker.py
python/code/infrastructure/email/: main.py
terraform/code/key_vault_tests/: data.tf  main.tf  providers.tf  variables.tf
terraform/code/null_subscription_test/: control_plane_test.sh  data_plane_test.sh  main.tf
